# outer

./: .gitignore  CLAUDE.md  Cargo.toml  GETTING_STARTED.md  README.md  TODO.md  package.json  pnpm-lock.yaml
cli/: Cargo.toml
cli/src/: client.rs  main.rs  messages.rs  tui.rs
docs/plans/: outer-design.md
internal/templates/roles/: refinery.md.tmpl
migrations/: 20260110000001_init.sql  20260110000002_fork_rerun.sql  20260110_delegation.sql
scripts/: dev.sh  quality_gates.sh
src/: error.rs  lib.rs  main.rs  models.rs  opencode.rs  store.rs  websocket.rs
src/crdt/: journal_doc.rs  mod.rs  participant.rs  room.rs
src/delegation/: capability.rs  manager.rs  mod.rs  participant.rs  work_item.rs
tests/: api_tests.rs  delegation_tests.rs  opencode_integration.rs  websocket_tests.rs
web/: .prettierignore  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: app.css  app.html
web/src/lib/: index.test.ts  index.ts  stores.ts  types.ts  websocket.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/journal/[id]/: +page.svelte  ApprovalPanel.svelte  BlockCard.svelte  BlockGraph.svelte  PresenceBar.svelte
