[package]
name = "outer"
version = "0.1.0"
edition = "2021"
description = "Outer.sh server - collaborative AI conversation interface"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# CRDT for collaborative editing
yrs = "0.18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async utilities
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
