[package]
name = "outer-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for Outer.sh - collaborative AI conversation interface"
license = "MIT"

[[bin]]
name = "outer-cli"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization (shared types with server)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2"

[dev-dependencies]
tokio-test = "0.4"
